[gd_scene load_steps=10 format=3 uid="uid://dss2cd5nrow1k"]

[ext_resource type="Texture2D" uid="uid://20jkol60sy6o" path="res://assets/AltarBrick.png" id="1_0b4wk"]
[ext_resource type="Script" path="res://scripts/speed_altar.gd" id="1_lgxga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b70c6"]
size = Vector2(242, 133)

[sub_resource type="Gradient" id="Gradient_3eooe"]
colors = PackedColorArray(0, 0, 1, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sf1mb"]
gradient = SubResource("Gradient_3eooe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_it4xd"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 20.0
initial_velocity_min = 25.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 3.0
color_initial_ramp = SubResource("GradientTexture1D_sf1mb")

[sub_resource type="Animation" id="Animation_vrno4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stat:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stat:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-73, -28)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Stat:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tsylw"]
resource_name = "activate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.713726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stat:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stat:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-73, -28), Vector2(-150, -100)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Stat:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.611765)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drwxy"]
_data = {
"RESET": SubResource("Animation_vrno4"),
"activate": SubResource("Animation_tsylw")
}

[node name="SpeedAltar" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_lgxga")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_0b4wk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -34.5)
shape = SubResource("RectangleShape2D_b70c6")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-16, -8)
amount = 16
process_material = SubResource("ParticleProcessMaterial_it4xd")
lifetime = 2.0

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(16, -8)
amount = 16
process_material = SubResource("ParticleProcessMaterial_it4xd")
lifetime = 2.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -123.0
offset_top = -40.0
offset_right = -31.0
offset_bottom = 35.0
text = "speed altar;
left click 
to activate"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_drwxy")
}

[node name="Stat" type="Label" parent="."]
visible = false
offset_left = -73.0
offset_top = -28.0
offset_right = 63.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 20
text = "+100 speed"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
